--- a/api/view/detail.html
+++ b/api/view/detail.html
@@ -8,7 +8,9 @@
           <p>Word：{{ .keyword.KeywordId }} <input type="hidden" name="id" value="{{ .keyword.KeywordId }}" /></p>
           <p>Word：<input type="text" name="word" value="{{ .keyword.Word }}" /></p>
           <p>Description： <input type="text" name="description" value="{{ .keyword.Description }}" /></p>
-          <p>ImageUrl： <input type="text" name="image_url" value="{{ .keyword.imageUrl }}" /></p>
+          {{ if .keyword.ImageUrl }}
+          <p>ImageUrl： <input type="text" name="image_url" value="{{ .keyword.ImageUrl }}" /></p>
+          {{ end }}
           <input type="submit" formaction="/keyword/update" value="更新" /> 
           <input type="submit" formaction="/keyword/delete" value="削除" /> 
         </form>
